[package]
name = "redox_netstack"
version = "0.1.0"

[[bin]]
name = "ethernetd"
path = "src/ethernetd/main.rs"

[dependencies]
netutils = { git = "https://github.com/redox-os/netutils.git" }
rand = "0.3"
redox_event = { git = "https://github.com/redox-os/event.git" }
redox_syscall = "0.1"
smoltcp = { git = "https://github.com/little-dude/smoltcp/", branch = "redox" }
